--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<center>
+		<div style="position:related; background-color:lightblue; color:purple; height:200px; width:200px; border:2px solid black; display:flex; align-items:center;
+			text-align:center;">
+			<center style="padding-left:53px;">This is center</center>
+			
+		</div>
+	</center>
+	
 
 </body>
 
